# recvx2c

./: .env.json  .gitignore  CMakeLists.txt  CMakePresets.json  build.py  compile_commands.json  linker.lcf  main.c  toolchain-ps2.cmake
cmake/: toolchain-ps2.cmake
ps2/veronica/prog/: main.c  main.h  mwwrap.c  mwwrap.h  njplus.c  ps2_LoadScreen.c  ps2_LoadScreen.h  ps2_MemoryCard.c  ps2_MemoryCard.h  ps2_MovieFunc.c  ps2_MovieFunc.h  ps2_NaMath.c  ps2_NaMath.h  ps2_NaMatrix.c  ps2_NaSystem.c  ps2_NaSystem.h  ps2_NaTextureFunction.c  ps2_SaveScreen.c  ps2_SaveScreen.h  ps2_SystemLoadScreen.c  ps2_SystemLoadScreen.h  ps2_SystemSaveScreen.c  ps2_SystemSaveScreen.h  ps2_Vu1Strip.c  ps2_dummy.c  ps2_loadtim2.h  ps2_sfd_mw.c  ps2_sfd_mw.h  ps2_sg_maloc.c  sdfunc.c  system.c  types.h  vibman.c  vibman.h
tools/: build.py  putblob.py
win/: win.h
